--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'Chess';
-  src:  url('https://github.com/salsan/chess-font/blob/main/Chess.eot?raw=true?rrsh65');
-  src:  url('fhttps://github.com/salsan/chess-font/blob/main/Chess.eot?raw=true?rrsh65#iefix') format('embedded-opentype'),
-    url('https://github.com/salsan/chess-font/blob/main/Chess.ttf?raw=true?rrsh65') format('truetype'),
-    url('https://github.com/salsan/chess-font/blob/main/Chess.woff?rrsh65') format('woff'),
-    url('https://raw.githubusercontent.com/salsan/chess-font/main/Chess.svg?rrsh65#Chess') format('svg');
+  src:  url('https://projects.salsan.dev/chess-font/files/Chess.eot?rrsh65');
+  src:  url('https://projects.salsan.dev/chess-font/files/Chess.eot?rrsh65#iefix') format('embedded-opentype'),
+    url('https://projects.salsan.dev/chess-font/files/Chess.ttf?rrsh65') format('truetype'),
+    url('https://projects.salsan.dev/chess-font/files/Chess.woff?rrsh65') format('woff'),
+    url('https://projects.salsan.dev/chess-font/files/chess-font/Chess.svg?rrsh65#Chess') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
