--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   font-display: block;
 }
 
+
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'Chess' !important;
@@ -25,6 +26,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-chess-tournament:before {
+  content: "\e929";
+}
 .icon-fide-title-wcm:before {
   content: "\e920";
 }
@@ -148,3 +152,4 @@
 .icon-lichess-classical:before {
   content: "\e918";
 }
+
