--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: 'Chess';
-  src:  url('https://projects.salsan.dev/chess-font/files/Chess.eot?9lbogm');
-  src:  url('https://projects.salsan.dev/chess-font/files/Chess.eot?9lbogm#iefix') format('embedded-opentype'),
-    url('https://projects.salsan.dev/chess-font/files/Chess.ttf?9lbogm') format('truetype'),
-    url('https://projects.salsan.dev/chess-font/files/Chess.woff?9lbogm') format('woff'),
-    url('https://projects.salsan.dev/chess-font/files/Chess.svg?9lbogm#Chess') format('svg');
+  src:
+    url('fonts/Chess.ttf?68okim') format('truetype'),
+    url('fonts/Chess.woff?68okim') format('woff'),
+    url('fonts/Chess.svg?68okim#Chess') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-fsi-club-me-15011:before {
+  content: "\e93d";
+}
 .icon-fsi-club-rg-15109:before {
   content: "\e939";
 }
