--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Chess';
   src:
-    url('fonts/Chess.ttf?68okim') format('truetype'),
-    url('fonts/Chess.woff?68okim') format('woff'),
-    url('fonts/Chess.svg?68okim#Chess') format('svg');
+    url('https://projects.salsan.dev/chess-font/files/Chess.ttf?eot?9lbogm') format('truetype'),
+    url('https://projects.salsan.dev/chess-font/files/Chess.woff?eot?9lbogm') format('woff'),
+    url('https://projects.salsan.dev/chess-font/files/Chess.svg?eot?9lbogm#Chess') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
